cloud/w10/lab1/gatekeeper/constraints/template-no-hostnetwork.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowhostnetwork
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowHostNetwork
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sdisallowhostnetwork

      violation[{"msg": msg}] {
        input.review.object.spec.hostNetwork == true
        msg := "Using hostNetwork is disallowed."
      }
