cloud/w10/lab1/gatekeeper/constraints/template-no-root.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowroot
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowRoot
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sdisallowroot

      violation[{"msg": msg}] {
        # Check pod level security context
        input.review.object.spec.securityContext.runAsUser == 0
        msg := "Pod-level securityContext.runAsUser cannot be 0 (root)."
      }

      violation[{"msg": msg}] {
        # Check container level security context
        container := input_containers[_]
        container.securityContext.runAsUser == 0
        msg := sprintf("Container '%v' securityContext.runAsUser cannot be 0 (root).", [container.name])
      }

      input_containers[c] {
        c := input.review.object.spec.containers[_]
      }
      input_containers[c] {
        c := input.review.object.spec.initContainers[_]
      }
      input_containers[c] {
        c := input.review.object.spec.ephemeralContainers[_]
      }
