cloud/w10/lab1/gatekeeper/constraints/template-require-limits.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredlimits
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLimits
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8srequiredlimits

      violation[{"msg": msg}] {
        container := input_containers[_]
        not container.resources.limits.cpu
        msg := sprintf("Container '%v' does not have CPU limits specified.", [container.name])
      }

      violation[{"msg": msg}] {
        container := input_containers[_]
        not container.resources.limits.memory
        msg := sprintf("Container '%v' does not have Memory limits specified.", [container.name])
      }

      input_containers[c] {
        c := input.review.object.spec.containers[_]
      }
      input_containers[c] {
        c := input.review.object.spec.initContainers[_]
      }
